<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="298dp"
                    android:background="@drawable/gradient"
                    android:scaleType="centerCrop"
                    android:src="@drawable/orig"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="298dp"
                    android:background="@drawable/gradient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="15dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="59dp"
                    android:background="@drawable/ic_action_name"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="59dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="220dp"
                    android:text="@string/old"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_black"
                    android:lineSpacingExtra="-7sp"
                    android:text="@string/name"
                    android:textColor="@color/second_color"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/old" />


                <TextView
                    android:id="@+id/kinds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/kinds"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:paddingTop="2dp"
                    android:progressBackgroundTint="@color/gray"
                    android:progressTint="@color/red"
                    android:rating="4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kinds" />

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/reviews"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/ratingBar"
                    app:layout_constraintTop_toBottomOf="@+id/kinds" />

                <TextView
                    android:id="@+id/storyline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/storyline"
                    android:textColor="@color/second_color"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/text_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:lineSpacingExtra="5sp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="24dp"
                    android:text="@string/text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/storyline" />

                <TextView

                    android:id="@+id/cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/style_for_photo"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/cast"
                    android:textColor="@color/second_color"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_all" />


                <ImageView
                    android:id="@+id/movie_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"

                    android:background="@drawable/style_for_photo"
                    android:src="@drawable/movie_one"
                    app:layout_constraintEnd_toStartOf="@+id/movie_two"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cast" />


                <ImageView
                    android:id="@+id/movie_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/style_for_photo"
                    android:src="@drawable/movie_two"
                    app:layout_constraintEnd_toStartOf="@+id/movie_thre"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/movie_one"
                    app:layout_constraintTop_toBottomOf="@+id/cast" />

                <ImageView
                    android:id="@+id/movie_thre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/style_for_photo"
                    android:src="@drawable/movie_thre"
                    app:layout_constraintEnd_toStartOf="@+id/movie_four"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/movie_two"
                    app:layout_constraintTop_toBottomOf="@+id/cast" />


                <ImageView

                    android:id="@+id/movie_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/movie_four"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/movie_thre"
                    app:layout_constraintTop_toBottomOf="@+id/cast" />

                <TextView
                    android:id="@+id/mark_ruffalo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/mark_ruffalo"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/movie_one"
                    app:layout_constraintTop_toBottomOf="@+id/movie_one" />

                <TextView
                    android:id="@+id/chris_evans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/chris_evans"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/movie_two"
                    app:layout_constraintTop_toBottomOf="@+id/movie_two" />

                <TextView
                    android:id="@+id/chris_hemsworth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/chris_hemsworth"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/movie_thre"
                    app:layout_constraintTop_toBottomOf="@+id/movie_thre" />

                <TextView
                    android:id="@+id/robert_downe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/robert_downey"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/movie_four"
                    app:layout_constraintTop_toBottomOf="@+id/movie_four" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>